sign error on lemma

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -661,14 +661,49 @@ Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rv
 \begin{figure}[h]
   \begin{tabular}{|c|c|}
     \hline
-     \includegraphics{graphics/transferHs_p.pdf}
-    &\includegraphics{graphics/transferHs_ddp.pdf}
+     \tbox{\includegraphics{graphics/transferHs_p.pdf}}
+    &\tbox{\includegraphics{graphics/transferHs_ddp.pdf}}
     \\
-    $\estHs$&$\ddp\estHs$ where $p\eqd s^2$
+     $\estHs$ as a function of $p\eqd s^2$
+    &$\ddp\estHs$ where $p\eqd s^2$
     \\\hline
   \end{tabular}
   \caption{$\estHs$ with $\Swxx=\Swyy=1$ and $\Swxy=\frac{1}{2}$\label{fig:Hs}}
 \end{figure}
+
+%--------------------------------%
+\begin{lemma}
+\label{lem:Hs_ddp}
+%--------------------------------%
+\lembox{\begin{array}{rcl}
+    \ddp\brs{\Swyy - p \Swxx  + \sqrt{\brp{\Swyy - p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      &=& \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+               { \sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+    \\
+    \ddp\brs{p\Swyy - \Swxx  + \sqrt{\brp{p\Swyy - \Swxx }^2 + 4 p \abs{\Swxy }^2}}
+      &=& \frac{ \Swyy\brp{p\Swyy-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
+               { \sqrt{\brp{p\Swyy-\Swxx }^2 + 4p\abs{\Swxy}^2}}
+\end{array}}
+\end{lemma}
+\begin{proof}
+  \begin{align*}
+      &\ddp\brs{\Swyy-p\Swxx + \sqrt{\brp{\Swyy-p\Swxx }^2 + 4 p \abs{\Swxy}^2}}
+      = -\Swxx  + \frac{-2\Swxx\brp{\Swyy-p\Swxx}   + 4 \abs{\Swxy}^2}
+                        {2\sqrt{\brp{\Swyy-p\Swxx}^2 + 4p\abs{\Swxy}^2}}
+    \\&= \frac{4 \abs{\Swxy }^2 -2\Swxx\brp{\Swyy-p\Swxx} - 2\Swxx\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+              {2\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+    \\&= \frac{\Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+              {\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+    \\
+      &\ddp\brs{p\Swyy-\Swxx + \sqrt{\brp{p\Swyy-\Swxx }^2 + 4 p \abs{\Swxy}^2}}
+       = \Swyy  + \frac{2\Swyy\brp{p\Swyy-\Swxx}   + 4 \abs{\Swxy}^2}
+                        {2\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
+    \\&= \frac{4 \abs{\Swxy }^2 +2\Swyy\brp{p\Swyy-\Swxx} + 2\Swyy\sqrt{\brp{p\Swyy-\Swxx }^2 + 4p\abs{\Swxy}^2}}
+              {2\sqrt{\brp{p\Swyy-\Swxx }^2 + 4p\abs{\Swxy}^2}}
+    \\&= \frac{\Swyy\brp{p\Swyy-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
+              {\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
+  \end{align*}
+\end{proof}
 % _______________________________
 %|P|                             |
 %|R| Hs(w; s=0)     = H2(w)      |
@@ -686,101 +721,71 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
 \end{array}}
 \end{proposition}
 \begin{proof}
-\begin{align*}
+{\begin{align*}
   &\brlr{\estHs(\omega; s)}_{s=0}
   \\&\eqd \brlr{
-       \frac{\Swyy(\omega)- s^2 \Swxx(\omega) +
-             \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
-            }{2\Swxy(\omega)}}_{s=0}
+       \frac{\Swyy- s^2 \Swxx + \sqrt{\brs{\Swyy -  s^2 \Swxx}^2 + 4 s^2 \abs{\Swxy}^2}}
+            {2\Swxy}
+       }_{s=0}
     && \text{by def. of $\estHs$}
     && \text{\xref{def:Hs}}
-  \\&= \frac{\Swyy(\omega)- 0 + \sqrt{\brs{\Swyy(\omega) -  0}^2 + 0}}
-            {2\Swxy(\omega)}
-     = \frac{\Swyy(\omega)}
-            {\Swxy(\omega)}
-  \\&\eqd \estHb(\omega)
+  \\&= \frac{\Swyy- 0 + \sqrt{\brs{\Swyy -  0}^2 + 0}}
+            {2\Swxy}
+     = \frac{\Swyy}
+            {\Swxy}
+  \\&\eqd \estHb
     && \text{by def. of $\estHb$}
     && \text{\xref{def:H2}}
   \\
   \\
   &\brlr{\estHs(\omega; s)}_{s=1}
   \\&\eqd \brlr{
-       \frac{\Swyy(\omega)- s^2 \Swxx(\omega) +
-             \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
-            }{2\Swxy(\omega)}}_{s=1}
+       \frac{\Swyy- s^2 \Swxx +
+             \sqrt{\brs{\Swyy -  s^2 \Swxx}^2 + 4 s^2 \abs{\Swxy}^2}
+            }{2\Swxy}}_{s=1}
     && \text{by def. of $\estHs$}
     && \text{\xref{def:Hs}}
-  \\&= \frac{\Swyy(\omega)- \Swxx(\omega) +
-             \sqrt{\brs{\Swyy(\omega) -  \Swxx(\omega)}^2 + 4 \abs{\Swxy(\omega)}^2}
-            }{2\Swxy(\omega)}
-  \\&\eqd \estHv(\omega)
+  \\&= \frac{\Swyy- \Swxx +
+             \sqrt{\brs{\Swyy -  \Swxx}^2 + 4 \abs{\Swxy}^2}
+            }{2\Swxy}
+  \\&\eqd \estHv
     && \text{by def. of $\estHv$}
     && \text{\xref{def:Hv}}
   \\
   \\
   &\lim_{s\to\infty}\estHs(\omega; s)
   \\&\eqd \lim_{s\to\infty}
-       \frac{\Swyy(\omega)- s^2 \Swxx(\omega) + \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
-            }{2\Swxy(\omega)}
+       \frac{\Swyy- s^2 \Swxx + \sqrt{\brs{\Swyy -  s^2 \Swxx}^2 + 4 s^2 \abs{\Swxy}^2}
+            }{2\Swxy}
     && \text{by def. of $\estHs$}
     && \text{\xref{def:Hs}}
   \\&\eqd \lim_{p\to0}
-       \frac{\Swyy(\omega)- \sfrac{1}{p} \Swxx(\omega) + \sqrt{\brs{\Swyy(\omega) -  \sfrac{1}{p} \Swxx(\omega)}^2 + 4 \sfrac{1}{p} \abs{\Swxy(\omega)}^2}
-            }{2\Swxy(\omega)}
+       \frac{\Swyy- \sfrac{1}{p} \Swxx + \sqrt{\brs{\Swyy -  \sfrac{1}{p} \Swxx}^2 + 4 \sfrac{1}{p} \abs{\Swxy}^2}
+            }{2\Swxy}
     && \text{where $p\eqd\sfrac{1}{s^2}$}
   \\&= \lim_{p\to0}
-       \frac{p\Swyy(\omega)-  \Swxx(\omega) + \sqrt{\brs{p\Swyy(\omega) -  \Swxx(\omega)}^2 + 4p\abs{\Swxy(\omega)}^2}
-            }{2p\Swxy(\omega)}
+       \frac{p\Swyy-  \Swxx + \sqrt{\brs{p\Swyy -  \Swxx}^2 + 4p\abs{\Swxy}^2}
+            }{2p\Swxy}
     && \text{by mult. by $1=\frac{p}{p}$}
   \\&= \lim_{p\to0}
-       \frac{\ddp\brs{p\Swyy(\omega)-  \Swxx(\omega) + \sqrt{\brs{p\Swyy(\omega) -  \Swxx(\omega)}^2 + 4p\abs{\Swxy(\omega)}^2}}
-            }{\ddp\brs{2p\Swxy(\omega)}}
+       \frac{\ddp\brs{p\Swyy-  \Swxx + \sqrt{\brs{p\Swyy -  \Swxx}^2 + 4p\abs{\Swxy}^2}}
+            }{\ddp\brs{2p\Swxy}}
     &&    \text{by \thme{l'H{/<o}pital's rule}}
-  \\&=\mathrlap{
-       \lim_{p\to0}
-       \frac{\ds\Swyy(\omega) +
-            \frac{2\brs{p\Swyy(\omega) -  \Swxx(\omega)}\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
-                 {2\sqrt{\brs{p\Swyy(\omega) -  \Swxx(\omega)}^2 + 4p\abs{\Swxy(\omega)}^2}}
-            }{\ds2\Swxy(\omega)}
-     = \frac{\ds\Swyy(\omega) +
-            \frac{-2\Swxx(\omega)\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
-                 {2\sqrt{\brs{ -  \Swxx(\omega)}^2 }}
-            }{\ds2\Swxy(\omega)}
-       }
-  \\&=\mathrlap{ 
-       \frac{2\Swyy(\omega)\Swxx(\omega) - 2\Swxx(\omega)\Swyy(\omega) + 4\abs{\Swxy(\omega)}^2}
-            {4\Swxx(\omega)\Swxy(\omega)}
-     = \frac{4\Swxy^\ast(\omega)\Swxy(\omega)}
-            {4\Swxx(\omega)\Swxy(\omega)}
-     = \frac{\Swxy^\ast(\omega)}
-            {\Swxx(\omega)}
-      }
-  \\&\eqd \estHa(\omega)
+  \\&= \lim_{p\to0}
+       \frac{\frac{\Swyy\brp{p\Swyy-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
+                  { \sqrt{\brp{p\Swyy-\Swxx }^2 + 4p\abs{\Swxy}^2}}
+            }{2\Swxy}
+  \\&= \frac{\Swyy\brp{-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{-\Swxx}^2}}
+            {2\Swxy \sqrt{\brp{-\Swxx }^2}}
+  \\&= \frac{2 \abs{\Swxy }^2}
+            {2\Swxx\Swxy}
+  \\&= \frac{\Swxy^\ast}
+            {\Swxx}
+  \\&\eqd \estHa
     && \text{by def. of $\estHa$}
     && \text{\xref{def:H1}}
-  %\\
-  %\lim_{s\to\infty}\estHs(\omega; s)
-  %  &\eqd \lim_{s\to\infty}
-  %        \frac{2s^2\Swyx(\omega)}
-  %             {s^2\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}}
-  %  && \text{by definition of $\estHs$}
-  %  && \text{\xref{def:Hs}}
-  %\\&= \lim_{s\to\infty}
-  %     \frac{2\Swyx(\omega)}
-  %          {\Swxx(\omega)-\frac{1}{s^2}\Swyy(\omega) + \sqrt{\frac{1}{s^4}\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + \frac{4}{s^4}s^2\abs{\Swxy(\omega)}^2}}
-  %\\&= \lim_{s\to\infty}
-  %     \frac{2\Swyx(\omega)}
-  %          {\Swxx(\omega)-\frac{1}{s^2}\Swyy(\omega) + \sqrt{\brs{\frac{1}{s^2}s^2\Swxx(\omega)-\frac{1}{s^2}\Swyy(\omega)}^2 + \frac{4}{s^2}\abs{\Swxy(\omega)}^2}}
-  %\\&= \frac{2\Swyx(\omega)}
-  %           {\Swxx(\omega)-0 + \sqrt{\brs{\Swxx(\omega)-0}^2 + 0}}
-  %\\&= \frac{\Swyx(\omega)}
-  %          {\Swxx(\omega)}
-  %\\&\eqd \estHa(\omega)
-  %  && \text{by definition of $\estHa(\omega)$}
-  %  && \text{\xref{def:H1}}
-\end{align*}
+\end{align*}}
 \end{proof}
-\newpage
 % ______________________________________
 %|T|                                    |
 %|H| Hs is monotonically decreasing in s|
@@ -802,7 +807,7 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
 \begin{enumerate}
   \item Let $p\eqd s^2$ \label{item:Hs_mono_p}
   \item lemma: \label{ilem:Hs_ineq_sq}
-    \begin{align*}
+    {\begin{align*}
       \boxed{\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2}
         &=   4 \abs{\Swxy}^4   
            + 4 \Swxx\abs{\Swxy}^2\brp{p \Swxx - \Swyy} 
@@ -819,7 +824,7 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
            +   \Swxx^2\brp{p \Swxx - \Swyy}^2 
       \\&= \Swxx^2 \brs{\brp{p \Swxx - \Swyy}^2  + 4p\abs{\Swxy}^2 }
       \\&= \boxed{\brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2  + 4p\abs{\Swxy}^2 }}^2}
-    \end{align*}
+    \end{align*}}
 
   \item lemma: \label{ilem:Hs_ineq}
       $2 \abs{\Swxy }^2   +\Swxx\brp{p \Swxx - \Swyy} \le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}$.
@@ -835,37 +840,9 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
     \\&\text{true by \pref{ilem:Hs_ineq_sq}}
     \end{align*}
 
-    %\begin{align*}
-    %  &
-    %  &2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy} 
-    %  &&\le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}
-    %\\&\iff
-    %  &\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2 
-    %  &&\le \brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}}^2
-    %\\&\iff
-    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{p \Swxx - \Swyy} +\Swxx^2\brp{p \Swxx - \Swyy}^2 
-    %  &&\le \Swxx^2\brp{p \Swxx - \Swyy}^2 + 4p\Swxx^2\abs{\Swxy }^2
-    %\\&\iff
-    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{p\Swxx-\Swyy} +\cancelto{0}{\Swxx^2\brp{p\Swxx-\Swyy}^2} 
-    %  &&\le \cancelto{0}{\Swxx^2\brp{p\Swxx-\Swyy}^2} + 4p\Swxx^2\abs{\Swxy}^2
-    %\\&\iff
-    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{p \Swxx - \Swyy}  
-    %  &&\le 4p\Swxx^2\abs{\Swxy }^2
-    %\\&\iff
-    %  4 \abs{\Swxy}^4   +4\Swxx\abs{\Swxy}\brp{\cancelto{0}{p \Swxx}-\Swyy}  
-    %  &&\le \cancelto{0}{4p\Swxx^2\abs{\Swxy }^2}
-    %\\&\iff
-    %  \abs{\Swxy}^4   
-    %  &&\le \abs{\Swxy}^2\Swxx\Swyy
-    %\\&\iff
-    %  \abs{\Swxy}^2   
-    %  &&\le \Swxx\Swyy
-    %\\&\text{true by \thme{Cauchy Schwartz inequality} \xref{thm:cs}}
-    %\end{align*}
-
-  \item lemma: derivative of $\estHs$ with respect to $p\eqd s^2$ \ldots
-    {\begin{align*}
-      \ddp\estHs
+  \item lemma: \label{ilem:Hs_mono_ddp}
+    \begin{align*}
+      \boxed{\ddp\estHs}
         &\eqd \ddp\frac{\Swyy - s^2 \Swxx  +
                           \sqrt{\brp{\Swyy - s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
                        }{2\Swxy }
@@ -875,22 +852,22 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
                        {2\Swxy}
         && \text{by definition of $p$}
         && \text{\xref{item:Hs_mono_p}}
-      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brp{\Swyy-p\Swxx}   + 4 \abs{\Swxy}^2}
-                                    {2\sqrt{\brp{\Swyy-p\Swxx}^2 + 4p\abs{\Swxy}^2}}
-                }{\ds2\Swxy}
-      \\&= \frac{4 \abs{\Swxy }^2 -2\Swxx\brp{\Swyy-p\Swxx} - 2\Swxx\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
-                {4\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
-      \\&= \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
-                {2\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
-      \\&\le 0
+      \\&= \frac{\frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+                      { \sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}}
+                {2\Swxy}
+        && \text{by \prefp{lem:Hs_ddp}}
+%
+%
+%      \\&= \frac{\ds- \Swxx  + \frac{-2\Swxx\brp{\Swyy-p\Swxx}   + 4 \abs{\Swxy}^2}
+%                                    {2\sqrt{\brp{\Swyy-p\Swxx}^2 + 4p\abs{\Swxy}^2}}
+%                }{\ds2\Swxy}
+%      \\&= \frac{4 \abs{\Swxy }^2 -2\Swxx\brp{\Swyy-p\Swxx} - 2\Swxx\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+%                {4\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+%      \\&= \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+%                {2\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
+      \\&\boxed{\le} \boxed{0}
         &&\text{by \pref{ilem:Hs_ineq}}
-%\\
-%\\
-%      \\&\le \frac{4 \abs{\Swxy }^2   -2\Swxx\brs{\brp{\Swyy  -  p \Swxx} + \sqrt{\brp{\Swyy  -  p \Swxx }^2 }}}
-%                  {4\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-%      \\&=   \frac{\abs{\Swxy }^2   -\Swxx\brp{\Swyy  -  p \Swxx} }
-%                  {\Swxy\sqrt{\brp{\Swyy  -  p \Swxx }^2 + 4 p \abs{\Swxy }^2}}
-    \end{align*}}
+    \end{align*}
 \end{enumerate}
 \end{proof}
 
