work in progress

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -658,19 +658,6 @@ Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rv
 %=======================================
 \section{Estimator relationships}
 %=======================================
-\begin{figure}[h]
-  \begin{tabular}{|c|c|}
-    \hline
-     \tbox{\includegraphics{graphics/transferHs_p.pdf}}
-    &\tbox{\includegraphics{graphics/transferHs_ddp.pdf}}
-    \\
-     $\estHs$ as a function of $p\eqd s^2$
-    &$\ddp\estHs$ where $p\eqd s^2$
-    \\\hline
-  \end{tabular}
-  \caption{$\estHs$ with $\Swxx=\Swyy=1$ and $\Swxy=\frac{1}{2}$\label{fig:Hs}}
-\end{figure}
-
 %--------------------------------%
 \begin{lemma}
 \label{lem:Hs_ddp}
@@ -704,6 +691,20 @@ Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rv
               {\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
   \end{align*}
 \end{proof}
+
+\begin{figure}[h]
+  \begin{tabular}{|c|c|}
+    \hline
+     &
+    \\\tbox{\includegraphics{graphics/transferHs_p.pdf}}
+     &\tbox{\includegraphics{graphics/transferHs_ddp.pdf}}
+    \\
+      $\estHs$ as a function of $p\eqd s^2$
+     &$\ddp\estHs$ where $p\eqd s^2$
+    \\\hline
+  \end{tabular}
+  \caption{$\estHs$ with $\Swxx=\Swyy=1$ and $\Swxy=\frac{1}{2}$\label{fig:Hs}}
+\end{figure}
 % _______________________________
 %|P|                             |
 %|R| Hs(w; s=0)     = H2(w)      |
@@ -775,6 +776,7 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
        \frac{\frac{\Swyy\brp{p\Swyy-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
                   { \sqrt{\brp{p\Swyy-\Swxx }^2 + 4p\abs{\Swxy}^2}}
             }{2\Swxy}
+    && \text{by \prefp{lem:Hs_ddp}}
   \\&= \frac{\Swyy\brp{-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{-\Swxx}^2}}
             {2\Swxy \sqrt{\brp{-\Swxx }^2}}
   \\&= \frac{2 \abs{\Swxy }^2}
@@ -808,8 +810,8 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
   \item Let $p\eqd s^2$ \label{item:Hs_mono_p}
   \item lemma: \label{ilem:Hs_ineq_sq}
     {\begin{align*}
-      \boxed{\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2}
-        &=   4 \abs{\Swxy}^4   
+      &\boxed{\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2}
+      \\&=   4 \abs{\Swxy}^4   
            + 4 \Swxx\abs{\Swxy}^2\brp{p \Swxx - \Swyy} 
            +   \Swxx^2\brp{p \Swxx - \Swyy}^2 
       \\&\boxed{\le} 4 \abs{\Swxy}^2\Swxx\Swyy 
@@ -830,14 +832,13 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
       $2 \abs{\Swxy }^2   +\Swxx\brp{p \Swxx - \Swyy} \le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}$.
       Proof:
     \begin{align*}
-      &
-      &2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy} 
-      &&\le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}
-    \\&\iff
-      &\brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2 
-      &&\le \brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}}^2
+        2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy} 
+      &\le \Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}
+    \\\iff
+       \brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2 
+       &\le \brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}}^2
       && \text{because $\ff(x)\eqd x^2$ is \prope{strictly monotonic increasing}}
-    \\&\text{true by \pref{ilem:Hs_ineq_sq}}
+    \\\text{true by \pref{ilem:Hs_ineq_sq}}
     \end{align*}
 
   \item lemma: \label{ilem:Hs_mono_ddp}
@@ -865,7 +866,7 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
 %                {4\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
 %      \\&= \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
 %                {2\Swxy\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
-      \\&\boxed{\le} \boxed{0}
+      \\&\boxed{\le 0}
         &&\text{by \pref{ilem:Hs_ineq}}
     \end{align*}
 \end{enumerate}
