--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -773,15 +773,15 @@ Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
             }{\ddp\brs{2p\Swxy}}
     &&    \text{by \thme{l'H{/<o}pital's rule}}
   \\&= \lim_{p\to0}
-       \frac{\frac{\Swyy\brp{p\Swyy-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
+       \frac{\ds\frac{\Swyy\brp{p\Swyy-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
                   { \sqrt{\brp{p\Swyy-\Swxx }^2 + 4p\abs{\Swxy}^2}}
-            }{2\Swxy}
+            }{\ds2\Swxy}
     && \text{by \prefp{lem:Hs_ddp}}
   \\&= \frac{\Swyy\brp{-\Swxx} + 2 \abs{\Swxy }^2 +  \Swyy\sqrt{\brp{-\Swxx}^2}}
             {2\Swxy \sqrt{\brp{-\Swxx }^2}}
-  \\&= \frac{2 \abs{\Swxy }^2}
+     = \frac{2 \abs{\Swxy }^2}
             {2\Swxx\Swxy}
-  \\&= \frac{\Swxy^\ast}
+     = \frac{\Swxy^\ast}
             {\Swxx}
   \\&\eqd \estHa
     && \text{by def. of $\estHa$}
@@ -818,8 +818,10 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
            + 4p\Swxx \abs{\Swxy}^2\Swxx
            - 4 \Swxx \abs{\Swxy}^2\Swyy
            +   \Swxx^2\brp{p \Swxx - \Swyy}^2 
-        && \text{by \thme{Cauchy Schwartz inequality}}
-        && \text{\prefp{thm:cs}}
+        && \brp{\begin{array}[t]{M}
+             by \thme{Cauchy Schwartz inequality}\\
+             \xref{thm:cs}
+           \end{array}}
       \\&=   \cancelto{0}{4 \Swxx \Swyy \abs{\Swxy}^2}
            + 4p\Swxx       \abs{\Swxy}^2\Swxx
            - \cancelto{0}{4 \Swxx \Swyy \abs{\Swxy}^2}
@@ -837,8 +839,11 @@ Let $\estHs$ be defined as in \prefpp{def:Hs}.
     \\\iff
        \brs{2 \abs{\Swxy}^2   +\Swxx\brp{p \Swxx - \Swyy}}^2 
        &\le \brs{\Swxx\sqrt{\brp{p \Swxx - \Swyy}^2 + 4 p \abs{\Swxy }^2}}^2
-      && \text{because $\ff(x)\eqd x^2$ is \prope{strictly monotonic increasing}}
-    \\\text{true by \pref{ilem:Hs_ineq_sq}}
+      && \brp{\begin{array}[t]{M}
+           because $\ff(x)\eqd x^2$\\
+           is \prope{strictly monotonic increasing}
+         \end{array}}
+    \\\text{true by \pref{ilem:Hs_ineq_sq}, so \pref{ilem:Hs_ineq} also true}
     \end{align*}
 
   \item lemma: \label{ilem:Hs_mono_ddp}
@@ -988,10 +993,6 @@ Let $\angle z\eqd\phi$ be the \fncte{phase} of $z$.
 \end{array}$
 \\
 \end{proof}
-
-
-
-
 
 %=======================================
 \section{Least squares estimates}
@@ -1326,33 +1327,26 @@ Let $p\eqd s^2$.
 \begin{align*}
   \lim_{p\to0}\estHs
     &=    \lim_{p\to0} 
-          \frac{\ds 2p\Swyx }
-                {\ds  p\Swxx -\Swyy  +
-                 \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
-                }
-  \\&=    \frac{\ds \lim_{p\to0} \ddp 2p\Swyx }
-                {\lim_{p\to0} \ddp\brp{\ds  p\Swxx -\Swyy  +
-                 \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}
-                }}
+          \frac{2p\Swyx}
+               { p\Swxx -\Swyy  + \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}}
+  \\&=    \lim_{p\to0}
+          \frac{\ddp\brp{2p\Swyx}}
+               {\ddp\brp{\ds
+                 p\Swxx -\Swyy + \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy}^2}
+               }}
     &&    \text{by \thme{l'H{/<o}pital's rule}}
-  \\&=    \frac{\ds 2\Swyx }
-                {\ds \lim_{p\to0} \ddp\brp{ \Swxx  +
-                 \frac{2\Swxx\brs{p\Swxx -\Swyy } + 4\abs{\Swxy }^2}
-                      {2\sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}}
-                }}
-   &&=    \frac{\ds 2\Swyx }
-                {\ds  \Swxx  +
-                 \frac{-2\Swxx\Swyy  + 4\abs{\Swxy }^2}
-                      {2\sqrt{\brs{-\Swyy }^2}}
-                }
-  \\&=    \frac{\ds 2\Swyx }{
-               \frac{\ds2\Swxx \Swyy  + -2\Swxx\Swyy  + 4\abs{\Swxy }^2}
-                    {\ds2\Swyy }
+  \\&=    \lim_{p\to0}
+          \frac{2\Swyx}{\ds
+            \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 +  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+                 { \sqrt{\brp{p\Swxx-\Swyy }^2 + 4p\abs{\Swxy}^2}}
                }
-   &&=    \frac{\ds 4\Swyy \Swyx }
-               {\ds 4\abs{\Swxy }^2}
-     =    \frac{\ds \Swyy }
-               {\ds \Swxy }
+    &&    \text{by \prefp{lem:Hs_ddp}}
+  \\&=    \frac{2\Swyy\Swyx}
+               { -\Swxx\Swyy + 2 \abs{\Swxy }^2 +  \Swxx\Swyy}
+     =    \frac{2\Swyy\Swyx}
+               {2 \abs{\Swxy }^2}
+     =    \frac{\Swyy}
+               {\Swxy}
   \\&\eqd \estHb 
     && \text{by def. of $\estHb$ 
              \xref{def:H2}}
