--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -28,10 +28,10 @@
 
 
 %======================================
-%\section {Operations}
+%\section{Operations}
 %======================================
 %======================================
-\section {Convolution operator}
+\section{Convolution operator}
 %======================================
 \ifdochasnot{seq}{
 %--------------------------------------
@@ -129,7 +129,7 @@ Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
       (A).&\fx[n]\convd\fy[n] &=&   \sum_{k\in\Z} \fx[k]\fy[n-k] & and
     \\(B).&\fx[n],\fy[n]      &\in& \spllR                       &
-    \\   .&\fx[n],\fy[n]      &\mc{3}{l}{\spllR \quad\text{(\prope{absolutely summable})}}       %\xref{def:spllR}
+    \\    &                    \mc{4}{l}{\spllR \quad\text{(\prope{absolutely summable} \xrefnp{def:spllR})}}
   \end{array}}
   \implies
   \brb{\begin{array}{>{\ds}rc>{\ds}l}
@@ -158,7 +158,7 @@ Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
 \end{proof}
 
 %======================================
-\section {Z-transform}
+\section{Z-transform}
 %======================================
 %--------------------------------------
 \begin{definition}
@@ -586,7 +586,7 @@ complex conjugate pairs.
 
 
 %======================================
-\section {Filter Banks}
+\section{Filter Banks}
 %======================================
 \structe{Conjugate quadrature filters} (next definition) are used in \structe{filter banks}.
 If $\Zx(z)$ is a \structe{low-pass filter}, then the conjugate quadrature filter of $\Zy(z)$ is a \structe{high-pass filter}.
